--- a/package.json
+++ b/package.json
@@ -9,13 +9,22 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
-    "vue": "^2.6.14"
+    "firebase": "^9.8.1",
+    "quill": "^1.3.7",
+    "quill-image-resize-module": "^3.0.0",
+    "vue": "^2.6.14",
+    "vue-router": "^3.5.1",
+    "vue-svg-loader": "^0.16.0",
+    "vue2-editor": "^2.10.3",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
+    "@vue/cli-plugin-router": "^5.0.4",
+    "@vue/cli-plugin-vuex": "^5.0.4",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
